--- a/index.html
+++ b/index.html
@@ -1,36 +1,40 @@
 <!DOCTYPE html>
 <html>
+
+
 <head>
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet">
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
-   <title>Jupieter</title>
-   <link rel="stylesheet" href="static/styles.css">
-
+   <script src="https://kit.fontawesome.com/b5b0e1afd0.js"></script>
+   <link href="static/styles.css" rel="stylesheet">
+   <title> Jupieter </title>
 </head>
+
+
 <body>
-   <br>
-   <div class="container">
-      <h1>Jupieter</h1>
+   <div class="container my-5 bg-dark text-white border">
+         <h1>Jupieter</h1>
    </div>
-   <br><br><br>
    
-   <div class="container mt-3">
-      <div class="row p-2 ">
-         <div class="col-md-5 centered">
-            <img src="images\Ragaly_app.jpg" height="300"
-               style="float: right" alt="Egy rózsa fényképe" title="Make_Page">
+   <div class="container border p-2">
+      <div class="row p-2 border">
+         <div class="col-sm-12 centered border">
+            <p>
+               <img class="img-fluid" src="static\images\Ragaly_app _tr.png" height="300"
+               alt="Ragaly_app" title="Make_Page">
+            </p>
          </div>
       </div>
-      <div class="row p-2 ">
-         <div class="col-md-1 centered">
-            <img src="images\CoffeeBar_1 24-Oct-2022-095913.gif" height="300"
-               style="float: right" alt="Egy rózsa fényképe" title="Make_Page">
-         </div>
-         <div class="col-md-1 centered">
-            <img src="images\CoffeeBar_2 24-Oct-2022-100355.gif" height="300"
-               style="float: right" alt="Egy rózsa fényképe" title="Main_Page">
+      <div class="row p-2 border">
+         <div class="col-sm-1 centered border">
+            <img class="float-start" src="static\images\CoffeeBar_1 24-Oct-2022-095913.gif" height="300"
+               alt="CoffeBar_main" title="Make_Page">
+            </div>
+         <div class="col-sm-1 centered border">
+            <img class="float-start" src="static\images\CoffeeBar_2 24-Oct-2022-100355.gif" height="300"
+               alt="CoffeBar_make" title="Main_Page">
          </div>
       </div>
    </div>
