--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
    <script src="https://kit.fontawesome.com/b5b0e1afd0.js"></script>
    <link href="static/styles.css" rel="stylesheet">
    <title> Jupieter </title>
+
 </head>
 
 
@@ -18,26 +19,26 @@
          <h1>Jupieter</h1>
    </div>
    
-   <div class="container border p-2">
-      <div class="row p-2 border">
-         <div class="col-sm-12 centered border">
-            <p>
-               <img class="img-fluid" src="static\images\Ragaly_app _tr.png" height="300"
-               alt="Ragaly_app" title="Make_Page">
-            </p>
-         </div>
-      </div>
-      <div class="row p-2 border">
-         <div class="col-sm-1 centered border">
-            <img class="float-start" src="static\images\CoffeeBar_1 24-Oct-2022-095913.gif" height="300"
-               alt="CoffeBar_main" title="Make_Page">
-            </div>
-         <div class="col-sm-1 centered border">
-            <img class="float-start" src="static\images\CoffeeBar_2 24-Oct-2022-100355.gif" height="300"
-               alt="CoffeBar_make" title="Main_Page">
-         </div>
-      </div>
+   <div class="absolute_ragaly">
+         <img class="img-fluid" src="static\images\Ragaly_app _tr.png" width="560"
+         alt="Ragaly_app" title="Make_Page">
    </div>
+
+   <div class="absolute1">
+      <img src="static\images\CoffeeBar_1.gif" height="200"
+         alt="CoffeBar_main" title="Make_Page">
+   </div>
+   <div class="absolute2">
+      <img src="static\images\CoffeeBar_2.gif" height="200"
+      alt="CoffeBar_make" title="Main_Page">
+   </div>
+   <div class="absolute3">
+      <img src="static\images\CoffeeBar_3.gif" height="200"
+      alt="CoffeBar_Order" title="Order_Page">
+   </div>
+
+
+
 
 </body>
 </html>
